# pomodoro-task-app.py

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: logo.icns
koncentro/: constants.py  main_window.py
koncentro/models/: db_tables.py
koncentro/prefabs/: koncentroFluentWindow.py  workspaceListView.py
migrations/: env.py
pomodoro-task-app/: README.md  __main__.py  config_paths.py  config_values.py  constants.py  main_window.py
pomodoro-task-app/models/: config.py  db_tables.py  drag_and_drop.py  task_db.py  task_list_model.py  task_lookup.py  tasks_model.py  timer.py  website_blocker_model.py  website_list_manager_model.py  workspace_list_model.py  workspace_lookup.py
pomodoro-task-app/prefabs/: SpinBoxSettingCard.py  addTaskDialog.py  bottomBar.py  codeEditor.py  customFluentIcon.py  elidedLabel.py  pomodoroFluentWindow.py  roundedListItemDelegate.py  taskCard.py  taskList.py  taskListItemDelegate.py  workplaceManagerDialog.py  workspaceListView.py
pomodoro-task-app/resources/: logos_rc.py  resources.qrc  resources_rc.py
pomodoro-task-app/ui/: bottom_bar_widget.ui  pomodoro_view.ui  settings_view.ui  tasks_list_view.ui  website_blocker_view.ui
pomodoro-task-app/ui_py/: ui_bottom_bar_widget.py  ui_settings_view.py  ui_tasks_list_view.py  ui_website_blocker_view.py
pomodoro-task-app/utils/: check_for_updates.py  check_valid_db.py  db_utils.py  find_mitmdump_executable.py  get_app_version.py  time_conversion.py
pomodoro-task-app/views/: pomodoro_view.py  tasks_view.py
pomodoro-task-app/website_blocker/: filter.py  utils.py  website_blocker_manager.py
pomodoro_task_app/: __main__.py  config_values.py  constants.py  main_window.py
pomodoro_task_app/migrations/: env.py
pomodoro_task_app/models/: config.py  db_tables.py  task_list_model.py  timer.py
pomodoro_task_app/prefabs/: autoLoopVideoWidget.py  bottomBar.py  customFluentIcon.py  pomodoroFluentWindow.py  targetClickTeachingTip.py  taskList.py  taskListItemDelegate.py  transientPopupTeachingTip.py
pomodoro_task_app/resources/: resources.qrc  resources_rc.py
pomodoro_task_app/tutorial/: interfaceTutorial.py  pomodoroInterfaceTutorial.py  taskInterfaceTutorial.py  websiteFilterInterfaceTutorial.py  workspaceManagerDialogTutorial.py
pomodoro_task_app/ui/: tasks_list_view.ui  website_blocker_view.ui
pomodoro_task_app/ui_py/: ui_tasks_list_view.py
pomodoro_task_app/utils/: check_for_updates.py  check_valid_db.py  detect_windows_version.py  noHTTPClientError.py  setNavButtonEnabled.py
pomodoro_task_app/website_blocker/: filter.py  utils.py  website_blocker_manager.py
src/: __main__.py  config_values.py  constants.py  main.py  main_window.py
src/models/: config.py  drag_and_drop.py  task_lookup.py  tasks_model.py  timer.py  workspace_list_model.py  workspace_lookup.py
src/prefabs/: SpinBoxSettingCard.py  addTaskDialog.py  bottomBar.py  targetClickTeachingTip.py  taskCard.py  taskList.py  transientPopupTeachingTip.py
src/resources/: logos.qrc  logos_rc.py  resources_rc.py
src/tutorial/: pomodoroInterfaceTutorial.py
src/ui/: bottom_bar_widget.ui  pomodoro_view.ui  tasks.ui  (+1 more)
(+49 files in other folders)
