[tool.poetry]
name = "Koncentro"
version = "0.1.0"
description = ""
authors = ["kun-codes <77796630+throwaway69420-69420@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "pomodoro_task_app" }]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
validators = "^0.34.0"
PySide6-Fluent-Widgets = "^1.7.6"
pyside6 = "^6.8.2.1"
sqlalchemy = "^2.0.39"
psutil = "^7.0.0"
uniproxy = "^0.1.5"
loguru = "^0.7.3"
semver = "^3.0.4"
certifi = "^2025.1.31"
alembic = "^1.15.1"

[tool.poetry.group.build.dependencies]
nuitka = "^2.5.9"
ruff = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = [
    "koncentro/ui",
    "koncentro/ui_py",
    "koncentro/resources",
]
src = ["koncentro"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
fixable = ["ALL"]

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["resources.logos_rc", "resources.resources_rc"]
