[project]
name = "Koncentro"
version = "0.1.0"
description = ""
authors = [
    { name = "kun-codes", email = "77796630+throwaway69420-69420@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "validators (>=0.34.0,<1.0.0)",
    "PySide6-Fluent-Widgets (>=1.7.6,<2.0.0)",
    "pyside6 (>=6.8.2.1,<7.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "uniproxy (>=0.1.5,<0.2.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "semver (>=3.0.4,<4.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "alembic (>=1.15.1,<2.0.0)"
]
package-mode = false

[tool.poetry.group.build.dependencies]
nuitka = "^2.5.9"
ruff = "^0.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = [
    "src/ui",
    "src/ui_py",
    "src/resources",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
fixable = ["ALL"]

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["resources.logos_rc", "resources.resources_rc"]
